Experiments with CSQuery and Restsharp

--- a/src/Guillotine.Tests/Guillotine.Tests.csproj
+++ b/src/Guillotine.Tests/Guillotine.Tests.csproj
@@ -43,10 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Http\RequestTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Guillotine.Domain\Guillotine.Domain.csproj">
+      <Project>{83099C91-A30E-4BFE-BB70-B06691D7BB47}</Project>
+      <Name>Guillotine.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
